# ifpd-touchback-floatingmenu

./: .gitignore  README.md
GetTouchInfo/: Program.cs
InteractiveDisplayCapture/: InteractiveDisplayCapture.csproj  MainWindow.xaml.cs
InteractiveDisplayCapture/Controls/: EdgeMenuControl.xaml  SignalSource.xaml  SignalSource.xaml.cs
MCU/: CMakeLists.txt  DEPLOYMENT.md  README.md  SETUP.md  sdkconfig.defaults
MCU/main/: CMakeLists.txt  app_main.c  hid_touch.c  hid_touch.h  idf_component.yml  tusb_hid_example_main.c
Windows/FloatingMenu/: App.xaml  App.xaml.cs  AssemblyInfo.cs  DEPLOYMENT.md  FloatingMenu.csproj  InteractiveDisplayCapture.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md  config.json
Windows/FloatingMenu/Controls/: CameraWindow.xaml  CameraWindow.xaml.cs  EdgeHandleControl.xaml  EdgeHandleControl.xaml.cs  EdgeMenuControl.xaml  EdgeMenuControl.xaml.cs  SignalSource.xaml  SignalSource.xaml.cs
Windows/FloatingMenu/Helpers/: DeviceStatusEnum.cs  ReadJSON.cs  SignalSourceModel.cs
Windows/FloatingMenu/Styles/: ButtonDictionary.xaml  ListDictionary.xaml
Windows/GetTouchInfo/: DEPLOYMENT.md  Program.cs  README.md
Windows/GetTouchInfo/Helpers/: WindowProcess.cs
